--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -152,6 +152,9 @@ android {
 }
 
 dependencies {
+    compile project(':get-subnet-mask')
+    compile project(':react-native-network-info')
+    implementation project(':react-native-video')
     implementation project(':react-native-device-info')
     implementation project(':react-native-background-fetch')
     implementation project(':react-native-android-broadcast-receiver-event-reminder')
@@ -171,4 +174,13 @@ dependencies {
 task copyDownloadableDepsToLibs(type: Copy) {
     from configurations.compile
     into 'libs'
+}
+
+// https://github.com/facebook/react-native/issues/25364
+configurations.all {
+   resolutionStrategy {
+       force "com.google.firebase:firebase-core:11.4.2"
+       force "com.google.firebase:firebase-analytics:11.4.2"
+       force "com.google.android.gms:play-services-gcm:16.0.0"
+   }
 }
