--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "@babel/runtime": "^7.0.0",
     "date-and-time": "^0.6.3",
+    "get-subnet-mask": "^1.1.11",
     "immer": "^1.7.2",
+    "ipaddr.js": "^1.9.1",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "react": "^16.7.0-alpha.2",
@@ -27,12 +29,15 @@
     "react-native-email": "^1.0.2",
     "react-native-gesture-handler": "^1.0.16",
     "react-native-hooks": "^0.0.6",
+    "react-native-network-info": "^5.1.0",
     "react-native-shimmer": "^0.5.0",
     "react-native-simple-contacts": "file:./private_modules/react-native-simple-contacts",
     "react-native-sms-android": "file:./private_modules/react-native-sms-android",
     "react-native-sound": "file:./private_modules/react-native-sound",
     "react-native-vector-icons": "^6.3.0",
+    "react-native-video": "^5.0.2",
     "react-navigation": "^3.3.0",
+    "shift8-ip-func": "^1.0.4",
     "toggle-switch-react-native": "^2.0.2",
     "typesafe-actions": "^2.0.4"
   },
