--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-network-info": "^5.1.0",
     "react-native-shimmer": "^0.5.0",
     "react-native-simple-contacts": "file:./private_modules/react-native-simple-contacts",
+    "react-native-simple-table": "^0.0.3",
     "react-native-sms-android": "file:./private_modules/react-native-sms-android",
     "react-native-sound": "file:./private_modules/react-native-sound",
     "react-native-vector-icons": "^6.3.0",
