--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-email": "^1.0.2",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-hooks": "^0.0.6",
+    "react-native-loading-spinner-overlay": "^1.0.1",
     "react-native-network-info": "^5.1.0",
     "react-native-orientation-locker": "^1.1.6",
     "react-native-shimmer": "^0.5.0",
