--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
       android:theme="@style/AppTheme"
       >
       <activity
+        android:screenOrientation="portrait"
         android:launchMode="singleInstance"
         android:name=".MainActivity"
         android:label="@string/app_name"
