--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -11,6 +11,10 @@
       android:allowBackup="false"
       android:theme="@style/AppTheme"
       >
+      <!-- Sample AdMob App ID: ca-app-pub-3940256099942544~3347511713 -->
+      <meta-data
+          android:name="com.google.android.gms.ads.APPLICATION_ID"
+          android:value="ca-app-pub-7368787833850291~3727454845"/>
       <activity
         android:screenOrientation="portrait"
         android:launchMode="singleInstance"
