--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -155,6 +155,8 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-gesture-handler')
+    compile project(':react-native-admob')
     compile project(':react-native-orientation-locker')
     implementation("androidx.fragment:fragment:1.0.0")
     implementation("androidx.legacy:legacy-support-core-ui:1.0.0")
@@ -173,7 +175,6 @@ dependencies {
     implementation project(':react-native-network-info')
     implementation project(':react-native-video')
     implementation project(':react-native-shimmer')
-    implementation project(':react-native-gesture-handler')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     implementation "com.facebook.react:react-native:+"  // From node_modules
