--- a/package.json
+++ b/package.json
@@ -18,14 +18,15 @@
     "ipaddr.js": "^1.9.1",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
-    "react": "^16.7.0-alpha.2",
-    "react-dom": "16.7.0-alpha.0",
-    "react-native": "npm:@brunolemos/react-native",
+    "react": "16.9.0",
+    "react-dom": "16.9.0",
+    "react-native": "0.59.0",
+    "react-native-admob": "^2.0.0-beta.6",
     "react-native-device-info": "^3.1.3",
     "react-native-elements": "^1.0.0",
     "react-native-email": "^1.0.2",
     "react-native-gesture-handler": "^1.4.1",
-    "react-native-hooks": "^0.0.6",
+    "react-native-hooks": "^0.9.0",
     "react-native-loading-spinner-overlay": "^1.0.1",
     "react-native-network-info": "^5.1.0",
     "react-native-orientation-locker": "^1.1.6",
@@ -41,9 +42,9 @@
   "devDependencies": {
     "@types/jest": "^23.3.2",
     "@types/lodash": "^4.14.116",
-    "@types/react": "^16.7.17",
-    "@types/react-dom": "^16.0.9",
-    "@types/react-native": "^0.57.18",
+    "@types/react": "^16.8.0",
+    "@types/react-dom": "^16.8.0",
+    "@types/react-native": "^0.57.65",
     "babel-jest": "23.6.0",
     "jest": "23.6.0",
     "metro-react-native-babel-preset": "0.47.0",
