--- a/ios/taps.xcodeproj/xcshareddata/xcschemes/taps.xcscheme
+++ b/ios/taps.xcodeproj/xcshareddata/xcschemes/taps.xcscheme
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "smscalendar.app"
-               BlueprintName = "smscalendar"
-               ReferencedContainer = "container:smscalendar.xcodeproj">
+               BuildableName = "satline.app"
+               BlueprintName = "satline"
+               ReferencedContainer = "container:satline.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -43,9 +43,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "smscalendarTests.xctest"
-               BlueprintName = "smscalendarTests"
-               ReferencedContainer = "container:smscalendar.xcodeproj">
+               BuildableName = "satlineTests.xctest"
+               BlueprintName = "satlineTests"
+               ReferencedContainer = "container:satline.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -61,9 +61,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "smscalendarTests.xctest"
-               BlueprintName = "smscalendarTests"
-               ReferencedContainer = "container:smscalendar.xcodeproj">
+               BuildableName = "satlineTests.xctest"
+               BlueprintName = "satlineTests"
+               ReferencedContainer = "container:satline.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -71,9 +71,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "smscalendar.app"
-            BlueprintName = "smscalendar"
-            ReferencedContainer = "container:smscalendar.xcodeproj">
+            BuildableName = "satline.app"
+            BlueprintName = "satline"
+            ReferencedContainer = "container:satline.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -94,9 +94,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "smscalendar.app"
-            BlueprintName = "smscalendar"
-            ReferencedContainer = "container:smscalendar.xcodeproj">
+            BuildableName = "satline.app"
+            BlueprintName = "satline"
+            ReferencedContainer = "container:satline.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -113,9 +113,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "smscalendar.app"
-            BlueprintName = "smscalendar"
-            ReferencedContainer = "container:smscalendar.xcodeproj">
+            BuildableName = "satline.app"
+            BlueprintName = "satline"
+            ReferencedContainer = "container:satline.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
