--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -158,6 +158,7 @@ android {
 }
 
 dependencies {
+    implementation project(':@react-native-community_async-storage')
     compile project(':react-native-gesture-handler')
     compile project(':react-native-admob')
     compile project(':react-native-orientation-locker')
