--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0",
+    "@react-native-community/async-storage": "^1.6.3",
     "date-and-time": "^0.6.3",
     "get-subnet-mask": "^1.1.11",
     "immer": "^1.7.2",
