--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -76,7 +76,8 @@ project.ext.react = [
         entryFile: "index.js",
         bundleAssetName: "index.android.bundle",
         bundleInAlpha: true,
-        bundleInBeta: true
+        bundleInBeta: true,
+        enableHermes: true
 ]
 
 apply from: "../../node_modules/react-native/react.gradle"
@@ -158,6 +159,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-threads')
     implementation project(':@react-native-community_async-storage')
     compile project(':react-native-gesture-handler')
     compile project(':react-native-admob')
