--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "moment": "^2.24.0",
     "react": "16.9.0",
     "react-dom": "16.9.0",
-    "react-native": "0.59.0",
+    "react-native": "0.60.4",
     "react-native-admob": "file:./private_modules/react-native-admob",
     "react-native-device-info": "^3.1.3",
     "react-native-elements": "^1.0.0",
@@ -33,6 +33,7 @@
     "react-native-orientation-locker": "^1.1.6",
     "react-native-shimmer": "^0.5.0",
     "react-native-simple-table": "^0.0.3",
+    "react-native-threads": "^0.0.17",
     "react-native-vector-icons": "^6.3.0",
     "react-native-video": "file:./private_modules/react-native-video",
     "react-navigation": "^3.3.0",
