--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -80,6 +80,9 @@ project.ext.react = [
         enableHermes: true
 ]
 
+def enableHermes = project.ext.react.get("enableHermes", true);
+
+
 apply from: "../../node_modules/react-native/react.gradle"
 
 project.ext.vectoricons = [
@@ -155,6 +158,7 @@ android {
     }
     packagingOptions {
         exclude 'META-INF/proguard/androidx-annotations.pro'
+        pickFirst '**/libc++_shared.so'
     }
 }
 
@@ -184,6 +188,14 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     implementation "com.facebook.react:react-native:+"  // From node_modules
+
+    if (enableHermes) {
+        def hermesPath = "../../node_modules/hermesvm/android/";
+        debugImplementation files(hermesPath + "hermes-debug.aar")
+        releaseImplementation files(hermesPath + "hermes-release.aar")
+    } else {
+        implementation jscFlavor
+    }
 }
 
 // Run this once to be able to run the application with BUCK
