--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -80,9 +80,6 @@ project.ext.react = [
         enableHermes: true
 ]
 
-def enableHermes = project.ext.react.get("enableHermes", true);
-
-
 apply from: "../../node_modules/react-native/react.gradle"
 
 project.ext.vectoricons = [
@@ -159,8 +156,13 @@ android {
     packagingOptions {
         exclude 'META-INF/proguard/androidx-annotations.pro'
         pickFirst '**/libc++_shared.so'
+        pickFirst '**/libjsc.so'
     }
 }
+
+
+def enableHermes = project.ext.react.get("enableHermes", true);
+def useIntlJsc = false
 
 dependencies {
     implementation project(':react-native-threads')
@@ -196,6 +198,13 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+
+    if (useIntlJsc) {
+        implementation 'org.webkit:android-jsc-intl:+'
+    } else {
+        implementation 'org.webkit:android-jsc:+'
+    }
+
 }
 
 // Run this once to be able to run the application with BUCK
