--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -20,3 +20,7 @@ project(':react-native-video').projectDir = new File(rootProject.projectDir, '..
 include ':react-native-shimmer'
 project(':react-native-shimmer').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-shimmer/android')
 include ':app'
+
+gradle.ext.exoplayerRoot = '/Users/pal31/project/ExoPlayer'
+gradle.ext.exoplayerModulePrefix = 'exoplayer-'
+apply from: new File(gradle.ext.exoplayerRoot, 'core_settings.gradle')
