--- a/private_modules/react-native-video/android-exoplayer/.settings/org.eclipse.buildship.core.prefs
+++ b/private_modules/react-native-video/android-exoplayer/.settings/org.eclipse.buildship.core.prefs
@@ -2,7 +2,7 @@ arguments=
 auto.sync=false
 build.scans.enabled=false
 connection.gradle.distribution=GRADLE_DISTRIBUTION(VERSION(6.0))
-connection.project.dir=../../../android
+connection.project.dir=
 eclipse.preferences.version=1
 gradle.user.home=
 java.home=/Users/pal31/.jenv/versions/1.8
