--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -188,7 +188,7 @@ dependencies {
     implementation project(':react-native-device-info')
     implementation project(':get-subnet-mask')
     implementation project(':react-native-network-info')
-    implementation project(':react-native-video')
+    // implementation project(':react-native-video')
     implementation project(':react-native-shimmer')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
