--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -15,12 +15,12 @@ include ':get-subnet-mask'
 project(':get-subnet-mask').projectDir = new File(rootProject.projectDir, '../node_modules/get-subnet-mask/android/app')
 include ':react-native-network-info'
 project(':react-native-network-info').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-network-info/android')
-include ':react-native-video'
-project(':react-native-video').projectDir = new File(rootProject.projectDir, '../private_modules/react-native-video/android-exoplayer')
+// include ':react-native-video'
+// project(':react-native-video').projectDir = new File(rootProject.projectDir, '../private_modules/react-native-video/android-exoplayer')
 include ':react-native-shimmer'
 project(':react-native-shimmer').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-shimmer/android')
 include ':app'
 
-gradle.ext.exoplayerRoot = '/Users/pal31/project/ExoPlayer'
-gradle.ext.exoplayerModulePrefix = 'exoplayer-'
-apply from: new File(gradle.ext.exoplayerRoot, 'core_settings.gradle')
+// gradle.ext.exoplayerRoot = '/Users/pal31/project/ExoPlayer'
+// gradle.ext.exoplayerModulePrefix = 'exoplayer-'
+// apply from: new File(gradle.ext.exoplayerRoot, 'core_settings.gradle')
